--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 
 <head>
-  <title>Шаблон особистого портфоліо</title>
+  <title>Особисте портфоліо</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Template css Files -->
@@ -614,5 +614,6 @@
   <!-- Live Style Js - Demo Only -->
   <script src="js/styleSwitcher.js"></script>
 </body>
+
 
 </html>
